data/derived/sp14/progs/unify/prog0345.ml.out
Characters 93-95:
  | Average (x', y') -> (eval x' y + eval x y')/2;;
                              ^^
Error: This expression has type expr but an expression was expected of type
         expr * ('a -> 'b) * ('a -> 'b)
